Ok, sé que ya no le iba a mover, pero encontré un bug y lo corregí